--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvBody"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="90dp"
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/imageView2"
         app:srcCompat="@drawable/ic_vector_heart_stroke" />
@@ -63,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvBody"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@+id/imageView4"
         app:srcCompat="@drawable/ic_vector_retweet_stroke" />
@@ -77,5 +77,16 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="10dp"
         app:srcCompat="@drawable/ic_vector_messages_stroke" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvBody"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        app:srcCompat="@android:drawable/ic_menu_share"
+        app:tint="@android:color/darker_gray" />
 
 </RelativeLayout>
